Prueba de manejo

--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
 
         <div class="contenedorBo">
             <button class="btn btn-1" onclick="location.href='/Pages/Aprendizaje.html'">Reflexiones</button>
+          
+        </div>
+        <div class="contenedorBo">
+         
             <button class="btn btn-1" onclick="location.href='/Pages/Evidencias.html'">Evidencias</button>
         </div>
         <div class="contenedor-skills" id="skills">
