--- a/Pages/Evidencias.html
+++ b/Pages/Evidencias.html
@@ -55,7 +55,7 @@
                 genuina en el proceso de aprendizaje, y estamos entusiasmados por compartirlo en nuestro portafolio.
             </p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-xcz13RvmXM?si=CnZuqCwpXgrCI7jf"
+            <iframe class="video" width="460" height="315" src="https://www.youtube.com/embed/-xcz13RvmXM?si=CnZuqCwpXgrCI7jf"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
