--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="servicio">
                     <span class="icono5"><i class="fa-solid fa-code" style="color: #ffffff;"></i></span>
-                    <h4>Anlisis de Datos</h4>
+                    <h4>Análisis de Datos</h4>
 
 
                     <p>
@@ -240,7 +240,7 @@
             <div class="card-container">
                 <div class="card">
                     <div class="front-content">
-                        <p>Resolucion de problemas</p>
+                        <p>Resolución de problemas</p>
                     </div>
                     <div class="content">
                         <p class="heading">Resolución</p>
@@ -260,7 +260,7 @@
                         <p>Manejo del tiempo</p>
                     </div>
                     <div class="content">
-                        <p class="heading">Gestion</p>
+                        <p class="heading">Gestión</p>
                         <p>
                             La gestión del tiempo implica utilizar tu tiempo de manera eficiente para hacer tareas
                             importantes y evitar
@@ -289,10 +289,10 @@
             <div class="card-container">
                 <div class="card">
                     <div class="front-content">
-                        <p>Control y Estres</p>
+                        <p>Control y Estrés</p>
                     </div>
                     <div class="content">
-                        <p class="heading">Control y Estres</p>
+                        <p class="heading">Control y Estrés</p>
                         <p>
                             El estrés es una parte inevitable de la vida, pero nuestra capacidad para controlarlo y
                             manejarlo puede marcar una gran
