--- a/Pages/Aprendizaje.html
+++ b/Pages/Aprendizaje.html
@@ -74,7 +74,7 @@
                         <img src="/img/web/2.webp" />
                     </div>
                     <div class="content">
-                        <p class="heading">Resolucion de problemas y Comunicacion</p>
+                        <p class="heading">Resolucíon de problemas y Comunicación</p>
                         <p>
                             <span>
                                 La resolución de problemas implica identificar, analizar y encontrar soluciones para
