--- a/index.html
+++ b/index.html
@@ -232,9 +232,14 @@
     <!---Universidad-->
     <section id="universidad">
         <h1 class="titulo-seccion">Aprendizajes</h1>
-        <p class="texto-aprendizaje">
-            Aqui presento los temas vistos mas relevantes desde mi punto de vista
-        </p>
+
+        <div class="texto-aprendizaje">
+            <p class="texto">
+                Hemos explorado una variedad de temas que considero fundamentales tanto para mi carrera como para la vida en general. Estas discusiones han abarcado desde conceptos técnicos relevantes para mi campo de estudio hasta habilidades interpersonales y lecciones de vida. Al abordar estos temas, he logrado obtener una perspectiva más integral y equilibrada, contribuyendo no solo a mi desarrollo académico, sino también a mi crecimiento personal y profesional. Estoy convencido de que esta diversidad de conocimientos y experiencias enriquecerá mi capacidad para enfrentar desafíos, tanto en el ámbito académico como en la vida cotidiana
+            </p>
+
+        </div>
+        
         <h2>Insercion Universitaria</h2>
         <div class="filaU">
             <div class="card-container">
