--- a/Pages/Evidencias.html
+++ b/Pages/Evidencias.html
@@ -34,9 +34,12 @@
         <h2>Galería de Imágenes</h2>
 
         <div class="gallery">
-            <img src="/img/Universidad/e3.jpg" alt="Imagen 3">
+            <img src="/img/Universidad/e6.jpeg" alt="Imagen 2">
             <img src="/img/Universidad/e2.JPG" alt="Imagen 2">
+            <img src="/img/Universidad/e3.jpg" alt="Imagen 3">
             <img src="/img/Universidad/e1.png" alt="Imagen 1">
+            <img src="/img/Universidad/e4.jpeg" alt="Imagen 3">
+            <img src="/img/Universidad/e5.jpeg" alt="Imagen 1">
             <img src="/img/Universidad/acuerdo.png" alt="Imagen 3">
         </div>
         <div class="video-container">
